<resources>
    <string name="app_name">见圳</string>
    <string name="news">新闻</string>
    <string name="newspaper">数字报</string>
    <string name="government">见圳+</string>
    <string name="smart">智慧深圳</string>
    <string name="bbs">深圳论坛</string>
    <string name="slogan">深圳第一新闻门户</string>

    <string name="news_tv1">头条</string>
    <string name="news_tv2">发现深圳</string>
    <string name="news_tv3">深圳社区</string>
    <string name="news_tv4">政务+</string>

    <string name="news_comment">请输入你的评论</string>

    <string name="smartcity_tv1">城市服务</string>
    <string name="smartcity_tv1_1">打车</string>
    <string name="smartcity_tv1_2">水电</string>
    <string name="smartcity_tv1_3">快递</string>
    <string name="smartcity_tv1_4">机票</string>
    <string name="smartcity_tv2">生活工具</string>
    <string name="smartcity_tv2_1">话费</string>
    <string name="smartcity_tv2_2">校园一卡通</string>
    <string name="smartcity_tv2_3">信用卡还款</string>
    <string name="smartcity_tv2_4">股票</string>
    <string name="smartcity_tv2_5">爱心捐赠</string>
    <string name="smartcity_tv2_6">汇率换算</string>
    <string name="smartcity_tv2_7">游戏充值</string>
    <string name="smartcity_tv2_8">外汇交易</string>

    <string name="sideslip_title">电子报</string>
    <string name="sideslip_np1">我的关注</string>
    <string name="sideslip_np2">我的评论</string>
    <string name="sideslip_np3">我的消息</string>
    <string name="sideslip_np4">系统设置</string>

    <string name="sideslip_head_register">注册</string>
    <string name="sideslip_head_slash">/</string>
    <string name="sideslip_head_login">登录</string>
    <string name="sideslip_collection">收藏</string>
    <string name="sideslip_history">历史</string>
    <string name="sideslip_model">夜间</string>

    <string name="login_username">请输入手机号/用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="login_newregister">新用户注册 ></string>
    <string name="login_forgetpassword">忘记密码?</string>
    <string name="login_toast1">密码错误，请重试</string>
    <string name="login_toast2">该用户不存在</string>
    <string name="login_toast3">登录成功</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_weibo">微博登录</string>

    <string name="register_title">注册见圳</string>
    <string name="register_username">请输入用户名</string>
    <string name="register_mobilephone">请输入手机号</string>
    <string name="register_verification">请输入验证码</string>
    <string name="register_verification_send">发送验证码</string>
    <string name="register_verification_sended">验证码已发送</string>
    <string name="register_password">请输入密码</string>
    <string name="register_button">注册</string>
    <string name="register_login">已有账户，去登陆 ></string>

    <string name="forgetpw_title">重设密码</string>
    <string name="forgetpw_mobile">请输入手机号</string>
    <string name="forgetpw_verification">请输入验证码</string>
    <string name="forgetpw_verification_send">发送验证码</string>
    <string name="forgetpw_verification_sended">验证码已发送</string>
    <string name="forgetpw_password">请输入新密码</string>
    <string name="forgetpw_password_new">请再次输入新密码</string>
    <string name="forgetpw_button">修改密码</string>

    <string name="search_edittext">请输入要搜索的内容</string>
    <string name="search_cancel">取消</string>

    <string name="share_cancel">取消</string>
    <string name="share_wechat">微信</string>
    <string name="share_circle">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_qqzone">QQ空间</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_link">分享链接</string>

</resources>
