<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="end"
    android:divider="@drawable/tab_toolbar">

    <RadioGroup
        android:id="@+id/news_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/background2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/news_headlines"
            style="@style/tab_news_item"
            android:text="@string/news_tv1" />

        <RadioButton
            android:id="@+id/news_find"
            style="@style/tab_news_item"
            android:text="@string/news_tv2" />

        <RadioButton
            android:id="@+id/news_district"
            style="@style/tab_news_item"
            android:text="@string/news_tv3" />

        <RadioButton
            android:id="@+id/news_government"
            style="@style/tab_news_item"
            android:text="@string/news_tv4" />

    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

</LinearLayout>