<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="42dp"
        android:src="@mipmap/ic_login" />

    <LinearLayout
        android:id="@+id/sideslip_head_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sideslip_head_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sideslip_head_register"
            android:textColor="@color/theme"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sideslip_head_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/sideslip_head_slash"
            android:textColor="@color/theme"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sideslip_head_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sideslip_head_login"
            android:textColor="@color/theme"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sideslip_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/sideslip_menu_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sideslip_collection"
                style="@style/sideslip_menu_item2"
                android:drawableTop="@mipmap/ic_detail_collection"
                android:paddingTop="26dp"
                android:text="@string/sideslip_collection" />

            <RadioButton
                android:id="@+id/sideslip_history"
                style="@style/sideslip_menu_item2"
                android:drawableTop="@mipmap/ic_left_history"
                android:text="@string/sideslip_history" />

            <RadioButton
                android:id="@+id/sideslip_model"
                style="@style/sideslip_menu_item2"
                android:drawableTop="@mipmap/ic_left_night"
                android:text="@string/sideslip_model" />

        </RadioGroup>

    </LinearLayout>

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="#33000000"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_marginBottom="10dp"/>-->

</LinearLayout>