<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.sznews.news.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:src="@mipmap/arrow_gray"/>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/register_title"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="48dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/register_username"
                style="@style/Register_EditText"
                android:hint="@string/register_username" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="12dp"
                android:background="@color/login_edittext_underline" />

            <EditText
                android:id="@+id/register_mobile"
                style="@style/Register_EditText"

                android:hint="@string/register_mobilephone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="12dp"
                android:background="@color/login_edittext_underline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/register_verification"
                    android:layout_weight="2"
                    style="@style/Register_EditText"
                    android:hint="@string/register_verification" />

                <TextView
                    android:id="@+id/register_verification_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/register_verification_send"
                    android:textSize="16sp"
                    android:textColor="@color/login_button_bg"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="12dp"
                android:background="@color/login_edittext_underline" />

            <EditText
                android:id="@+id/register_password"
                style="@style/Register_EditText"
                android:hint="@string/register_password" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="12dp"
                android:background="@color/login_edittext_underline" />

            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/login_button_shape"
                android:text="@string/register_button"
                android:textColor="@color/background1"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_login"
                    android:textColor="@color/login_button_bg_edit"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>