<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.sznews.news.activity.ForgetpwActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/forgetpw_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:src="@mipmap/arrow_gray" />

        <TextView
            android:id="@+id/forgetpw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/forgetpw_title"
            android:textColor="@color/register_title"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/forgetpw_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:id="@+id/forgetpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/forgetpw_mobile"
                style="@style/Register_EditText"
                android:hint="@string/forgetpw_mobile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="12dp"
                android:background="@color/login_edittext_underline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/forgetpw_verification"
                    style="@style/Register_EditText"
                    android:layout_weight="2"
                    android:hint="@string/register_verification" />

                <TextView
                    android:id="@+id/register_verification_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/forgetpw_verification_send"
                    android:textColor="@color/login_button_bg"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="12dp"
                android:background="@color/login_edittext_underline" />

            <EditText
                android:id="@+id/forgetpw_password"
                style="@style/Register_EditText"
                android:hint="@string/forgetpw_password" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="12dp"
                android:background="@color/login_edittext_underline" />

            <EditText
                android:id="@+id/forgetpw_password_new"
                style="@style/Register_EditText"
                android:hint="@string/forgetpw_password_new" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="12dp"
                android:background="@color/login_edittext_underline" />

            <Button
                android:id="@+id/modify_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/login_button_shape"
                android:text="@string/forgetpw_button"
                android:textColor="@color/background1"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>