<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.sznews.news.activity.LoginActivity">

    <ImageView
        android:id="@+id/login_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:src="@mipmap/arrow_left" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:theme="@style/MyEditText">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:imeActionId="6"
                android:imeActionLabel="@string/login_button"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/login_edittext_text"
                android:textCursorDrawable="@drawable/login_edit"
                android:textSize="20sp"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/login_button"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/login_edittext_text"
                android:textColorHint="@color/login_edittext_hint"
                android:textCursorDrawable="@drawable/login_edit"
                android:textSize="20sp"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/login_button_shape"
            android:text="@string/login_button"
            android:textColor="@color/background1"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_newregister"
                android:textColor="@color/login_button_bg_edit"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/login_forgetpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/login_forgetpassword"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/wechat" />

        <ImageView
            android:id="@+id/login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/qq" />

        <ImageView
            android:id="@+id/login_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/weibo" />

    </LinearLayout>
</LinearLayout>